fix:主要修改了註冊及使用者的ＡＰＩ文件註釋
